# python-rabbitmq-stomp-ws

./: README.md  pyproject.toml
channels_stomp/: manage.py
channels_stomp/channels_stomp/: asgi.py  consumers.py  routing.py  settings.py  urls.py
fastapi-stomp/: main.py
rabbitmq-stom/: Dockerfile  readme.md  run.sh
stomp-js/: index.html  stomp.js
websockets-proxy/: main.py
