[tool.poetry]
name = "python-rabbit-stomp-ws"
version = "0.1.0"
description = ""
authors = ["vsk <v.krachkov@enestech.net>"]
readme = "README.md"
packages = [{include = "django_channels_rabbitmq_stomp"}]

[tool.poetry.dependencies]
python = "^3.9"
stomp-py = "^8.1.0"
django = "^4.1.3"
channels = "^4.0.0"
daphne = "^4.0.0"
websockets = "^10.4"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
